[metadata]
name = tempmon
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Temperature Monitoring Daemon
description-file =
    README.rst
home-page = https://pypi.python.org/pypi
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    tempmon

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    tempmon = tempmon.daemon:main

# [wheel]
# universal = 1
